--- a/core/tex/hacks.tex
+++ b/core/tex/hacks.tex
@@ -2,6 +2,7 @@
 
 % Render percent sign with nice font, not ugly Computer modern
     \mathcode`\%="7025
+    \DeclareRobustCommand{\%}{\text{\symbol{`\%}}}
     
 % Fixes mathspec bug -- URL numbers are rendered with wrong font
     \ernewcommand\eu@MathPunctuation@symfont{Latin:m:n}
