--- a/modules/seminar/templates/problems.tex
+++ b/modules/seminar/templates/problems.tex
@@ -24,7 +24,10 @@
             \texorpdfstring{%
                 \large \textbf{(* problem.title *)}%
                 (@ if problem.categories @)%
-                \normalsize \hfill kategóri(@ if problem.categories|length == 1 @)a(@ else @)e(@ endif @) (* problem.categories|format_list *)%
+                    \normalsize \hfill kategóri(@ if problem.categories|length == 1 @)a(@ else @)e(@ endif @) (* problem.categories|format_list *)%
+                (@ endif @)
+                (@ if competition.id == 'FX' @)
+                    \normalsize \hfill \textbf{(* problem.pointsDescription *) bodov}%
                 (@ endif @)
             }{%
                 (* round.number *).(* problem.number *) (* problem.title *)%
