Tidied up, points in seminar/problem.tex

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -1,6 +1,3 @@
-\RenewDocumentCommand{\vec}{m}{\mathbf{#1}}
-%\RenewDocumentCommand{\vec}{m}{\vv{#1}}
-
 \DeclareMathOperator{\diff}{d\!}
 \DeclareMathOperator{\pdiff}{\partial\!}
 \DeclareMathOperator{\fdiff}{\Delta\!}
@@ -74,6 +71,11 @@
     \EvalAt{\PDerivative[#1]{#2}{#3}}{#3 = #4}%
 }%
 
+\RenewDocumentCommand{\vec}{m}{\mathbf{#1}}
+%\NewDocumentCommand{\Avec}{m}{\vec{#1}}
+%\NewDocumentCommand{\Bvec}{m}{\mathbf{#1}}
+%\RenewDocumentCommand{\vec}{m}{\vv{#1}}
+
 \NewDocumentCommand{\EvalAt}{m m}{\left.#1\right|_{#2}}
 \NewDocumentCommand{\Expected}{m}{\left<#1\right>}
 
@@ -96,6 +98,6 @@
 \NewDocumentCommand{\Sum}{O{} O{} m}{\sum\limits_{#1}^{#2} #3}
 \NewDocumentCommand{\Product}{O{} O{} m}{\prod\limits_{#1}^{#2} #3}
 \NewDocumentCommand{\Abs}{m}{\left|#1\right|}
-\RenewDocumentCommand{\Hat}{m}{#1\kern-0.1em\hat{\phantom{#1}}}
+\RenewDocumentCommand{\Hat}{m}{#1\kern-0.4em\hat{\phantom{#1}}}
 
 \NewDocumentCommand{\Angle}{}{\text{\AngleSign}}
