--- a/modules/scholar/templates/homework-base.tex
+++ b/modules/scholar/templates/homework-base.tex
@@ -1,10 +1,10 @@
 \documentclass[12pt, twoside]{dgs}
 
-\setActive{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/homework/(* issue.id *)}%
+\setActive{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/homework/(* issue.id *)/}%
 \input{input/scholar/(* course.id *)/static/format-override.tex}
 \input{\activeDirectory/format-course.tex}
 \input{\activeDirectory/format-homework.tex}
- 
+
 \begin{document}
     \pagestyle{homework}
     \setcounter{section}{(* issue.number - 1 *)}
@@ -15,5 +15,5 @@
             najneskôr do začiatku cvičenia (* issue.deadline.strftime('%d. %m. %Y') *).            
             Odovzdaním čestne prehlasujete, že riešenia sú vaše vlastné.}
     \end{center}
-    \input{\activeDirectory/content.tex}
+    (@ block content @)(@ endblock content @)
 \end{document}
