Added number classes

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -108,3 +108,10 @@
 \NewDocumentCommand{\SmallO}{m}{\mathcal{o}(#1)}
 \NewDocumentCommand{\BigO}{m}{\mathcal{O}(#1)}
 \NewDocumentCommand{\BigTheta}{m}{\mathcal{\Theta}(#1)}
+
+\NewDocumentCommand{\Natural}{}{\mathbb{N}}
+\NewDocumentCommand{\NaturalZero}{}{\mathbb{N}_0}
+\NewDocumentCommand{\Integer}{}{\mathbb{Z}}
+\NewDocumentCommand{\Rational}{}{\mathbb{Q}}
+\NewDocumentCommand{\Real}{}{\mathbb{R}}
+\NewDocumentCommand{\Complex}{}{\mathbb{C}}
