--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -5,7 +5,7 @@
     per-mode                = reciprocal,                   % `symbol` for "m/s", `reciprocal` for "ms^{-1}"
     group-separator         = {\,},
     group-minimum-digits    = 5,
-    inter-unit-product      = {\kern 0.05em},               % add a very thin space between units
+    inter-unit-product      = {},                           % add a very thin space between units
     exponent-product        = \times,                       % \times for 5×10^7, \cdot for 5.1O^7
     number-unit-product     = {\ },                         % a non-breakable space between numbers and units
     output-decimal-marker   = {\text{.}},                   % decimal dot
