--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -23,6 +23,7 @@
 \DeclareSIUnit{\gforce}{g}
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\au}{au}
+\DeclareSIUnit{\byte}{B}
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{€}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
