Microfix to siunitx

--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -17,8 +17,8 @@
     retain-explicit-plus    = true,
 }
 
-\NewDocumentCommand{\Sun}{}{\odot}
-\NewDocumentCommand{\Earth}{}{\oplus}
+\RenewDocumentCommand{\Sun}{}{\odot}
+\RenewDocumentCommand{\Earth}{}{\oplus}
 
 \DeclareSIUnit{\gforce}{g}
 \DeclareSIUnit{\year}{y}
