--- a/modules/scholar/templates/homework-base.tex
+++ b/modules/scholar/templates/homework-base.tex
@@ -1,19 +1,14 @@
-\documentclass[12pt, twoside]{dgs}
+(@ extends 'base.tex' @)
 
-\setActive{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/homework/(* issue.id *)/}%
-\input{input/scholar/(* course.id *)/static/format-override.tex}
-\input{\activeDirectory/format-course.tex}
-\input{\activeDirectory/format-homework.tex}
+(@ block type @)homework(@ endblock @)
+(@ block typedir @)homework(@ endblock @)
 
-\begin{document}
-    \pagestyle{homework}
-    \setcounter{section}{(* issue.number - 1 *)}
+(@ block title @)
     \section{Domáca úloha č. (* issue.number *)}
     \begin{center}
         \textit{%
             Vypracovanú úlohu odovzdajte na papieri alebo \href{mailto:(* year.teacher.email *)}{e-mailom}
-            najneskôr do začiatku cvičenia (* issue.deadline.strftime('%d. %m. %Y') *).            
+            najneskôr do začiatku cvičenia (* issue.deadline.strftime('%d. %m. %Y') *).
             Odovzdaním čestne prehlasujete, že riešenia sú vaše vlastné.}
     \end{center}
-    (@ block content @)(@ endblock content @)
-\end{document}
+(@ endblock @)
