Fixed convert, renamed

--- a/modules/scholar/format/format-lecture.tex
+++ b/modules/scholar/format/format-lecture.tex
@@ -3,5 +3,5 @@
 \fancypagestyle{lecture}{
     \pagestyle{scholar}
     \fancyhead[L]{\textit{(* lecture.name *)}}
-    \fancyhead[R]{\textit{(* lecture.date.strftime('%d. %m. %Y') *)}}
+    \fancyhead[R]{\textit{(* lecture.date.strftime('%Y--%m--%d') *)}}
 }
