Added parsecs and degrees Fahrenheit

--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -24,6 +24,8 @@
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\au}{au}
 \DeclareSIUnit{\byte}{B}
+\DeclareSIUnit{\fahrenheit}{°F}
+\DeclareSIUnit{\parsec}{pc}
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{€}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
