Added inches to constants

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -116,3 +116,6 @@
 \NewDocumentCommand{\Rational}{}{\mathbb{Q}}
 \NewDocumentCommand{\Real}{}{\mathbb{R}}
 \NewDocumentCommand{\Complex}{}{\mathbb{C}}
+
+\NewDocumentCommand{\QText}{m}{\quad\text{#1}\quad}
+\NewDocumentCommand{\QQText}{m}{\qquad\text{#1}\qquad}
