--- a/core/tex/hacks.tex
+++ b/core/tex/hacks.tex
@@ -15,6 +15,7 @@
     \XeTeXDeclareMathSymbol{^^^^2202}{\mathinner}{\eu@MathPunctuation@symfont}{"2202}[\partial]
     \DeclareMathSymbol{;}{\mathpunct}{\eu@MathPunctuation@symfont}{`;}
     \XeTeXDeclareMathSymbol{^^^^2026}{\mathinner}{\eu@MathPunctuation@symfont}{"2026}[\mathellipsis]
+    \DeclareMathSymbol{°}{\mathalpha}{\eu@DigitsArabic@symfont}{`°}
     \DeclareMathSymbol{0}{\mathalpha}{\eu@DigitsArabic@symfont}{`0}
     \DeclareMathSymbol{1}{\mathalpha}{\eu@DigitsArabic@symfont}{`1}
     \DeclareMathSymbol{2}{\mathalpha}{\eu@DigitsArabic@symfont}{`2}
