--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -24,7 +24,8 @@
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\au}{au}
 \DeclareSIUnit{\byte}{B}
-\DeclareSIUnit{\fahrenheit}{°F}
+\DeclareSIUnit{\celsius}{\ensuremath{°}C}
+\DeclareSIUnit{\fahrenheit}{\ensuremath{°}F}
 \DeclareSIUnit{\parsec}{pc}
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{€}
