--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -32,3 +32,4 @@
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
 \DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\Sun}}
 \DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\Earth}}
+\DeclareSIUnit{\atomicmass}{u}
