--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -1,55 +1,58 @@
 section:
-    problems:           "Zadania"
-    solutions:          "Vzorové riešenia"
-    answers:            "Výsledky"
-    modulo:             "Zvyšok"
+    problems:               "Zadania"
+    solutions:              "Vzorové riešenia"
+    answers:                "Výsledky"
+    modulo:                 "Zvyšok"
 caption:
-    table:              "Tabuľka"
-    figure:             "Obrázok"
+    table:                  "Tabuľka"
+    figure:                 "Obrázok"
 competition:
     name:
-        nominative:     "Fyzikálny Náboj"
-        genitive:       "Fyzikálneho Náboja"
-    email:              "info-sk@physics.naboj.org"
-    website:            "https://physics.naboj.org/"
+        nominative:         "Fyzikálny Náboj"
+        genitive:           "Fyzikálneho Náboja"
+    email:                  "info-sk@physics.naboj.org"
+    website:                "https://physics.naboj.org/"
 tearoff:
-    team:               "Tím"
-    bottom:             "Tím si vyzdvihol všetky úlohy."
+    team:                   "Tím"
+    bottom:                 "Tím si vyzdvihol všetky úlohy."
 constants:
-    title:              "Tabuľka konštánt"
-    instruction:        "Počas Náboja odporúčame používať hodnoty konštánt z~tejto tabuľky. Výsledok získaný s použitím presnejších hodnôt Vám určite \\textbf{bude} uznaný."
-    constant:           "konštanta"
-    symbol:             "značka"
-    value:              "hodnota"
+    title:                  "Tabuľka konštánt"
+    instruction:            "Počas Náboja odporúčame používať hodnoty konštánt z~tejto tabuľky. Výsledok získaný s použitím presnejších hodnôt Vám určite \\textbf{bude} uznaný."
+    constant:               "konštanta"
+    symbol:                 "značka"
+    value:                  "hodnota"
 instructions:
-    title:              "Pokyny"
+    title:                  "Pokyny"
 envelope:
-    donotopen:          "Neotvárajte túto obálku pred začiatkom súťaže."
+    donotopen:              "Neotvárajte túto obálku pred začiatkom súťaže."
 
 physics_constants:
-    au:                 "astronomická jednotka (vzdialenosť Zem--Slnko)"
-    avogadro:           "Avogadrova konštanta"
-    boltzmann:          "Boltzmannova konštanta"
-    density_air:        "hustota vzduchu"
-    density_helium:     "hustota hélia"
-    density_water:      "hustota vody"
-    elementary_charge:  "elementárny náboj"
-    gforce:             "tiažové zrýchlenie pri povrchu Zeme"
-    gravity:            "gravitačná konštanta"
-    inch:               "palec"
-    mass_earth:         "hmotnosť Zeme"
-    mass_electron:      "hmotnosť elektrónu"
-    mass_proton:        "hmotnosť protónu"
-    mass_sun:           "hmotnosť Slnka"
-    parsec:             "parsek"
-    permeability:       "magnetická permeabilita vákua"
-    permittivity:       "elektrická permitivita vákua"
-    planck:             "Planckova konštanta"
-    pressure_standard:  "štandardný tlak pri hladine mora"
-    puerperium:         "šestonedelie"
-    radius_earth:       "polomer Zeme"
-    radius_sun:         "polomer Slnka"
-    solar_flux:         "solárna konštanta"
-    speed_light:        "rýchlosť svetla"
-    stefan_boltzmann:   "Stefan--Boltzmannova konštanta"
-    universal_gas:      "univerzálna plynová konštanta"
+    amu:                    "atómová hmotnostná jednotka"
+    au:                     "astronomická jednotka (vzdialenosť Zem--Slnko)"
+    avogadro:               "Avogadrova konštanta"
+    boltzmann:              "Boltzmannova konštanta"
+    density_air:            "hustota vzduchu"
+    density_helium:         "hustota hélia"
+    density_water:          "hustota vody"
+    density_mercury:        "hustota ortuti"
+    elementary_charge:      "elementárny náboj"
+    gforce:                 "tiažové zrýchlenie pri povrchu Zeme"
+    gravity:                "gravitačná konštanta"
+    heat_capacity_water:    "merná tepelná kapacita vody"
+    inch:                   "palec"
+    mass_earth:             "hmotnosť Zeme"
+    mass_electron:          "hmotnosť elektrónu"
+    mass_proton:            "hmotnosť protónu"
+    mass_sun:               "hmotnosť Slnka"
+    parsec:                 "parsek"
+    permeability:           "magnetická permeabilita vákua"
+    permittivity:           "elektrická permitivita vákua"
+    planck:                 "Planckova konštanta"
+    pressure_standard:      "štandardný tlak pri hladine mora"
+    puerperium:             "šestonedelie"
+    radius_earth:           "polomer Zeme"
+    radius_sun:             "polomer Slnka"
+    solar_flux:             "solárna konštanta"
+    speed_light:            "rýchlosť svetla"
+    stefan_boltzmann:       "Stefan--Boltzmannova konštanta"
+    universal_gas:          "univerzálna plynová konštanta"
