--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -6,7 +6,7 @@
     group-separator         = {\,},
     group-minimum-digits    = 5,
     inter-unit-product      = {\kern 0.1em},                % add a very thin space between units
-    exponent-product        = \times,                       % \times for 5×10^7, \cdot for 5.1O^7
+    exponent-product        = \cdot,                        % \times for 5×10^7, \cdot for 5.1O^7
     number-unit-product     = {\ },                         % a non-breakable space between numbers and units
     output-decimal-marker   = {\text{.}},                   % decimal dot
     range-units             = single,
