--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -79,6 +79,7 @@
 
 \NewDocumentCommand{\EvalAt}{m m}{\left.#1\right|_{#2}}
 \NewDocumentCommand{\Expected}{m}{\left<#1\right>}
+\NewDocumentCommand{\MeanValue}{m}{\overline{#1}}
 
 \NewDocumentCommand{\Int}{O{} O{} m m}{\kern -0.2em \int\limits_{#1}^{#2} #3\diff#4}
 \NewDocumentCommand{\Intx}{O{} O{} m}{\kern -0.2em \int\limits_{#1}^{#2} #3}
