--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -78,12 +78,13 @@
 %\RenewDocumentCommand{\vec}{m}{\vv{#1}}
 
 \NewDocumentCommand{\EvalAt}{m m}{\left.#1\right|_{#2}}
+\NewDocumentCommand{\EvalFromTo}{m m m}{\left.#1\right|_{#2}^{#3}}
 \NewDocumentCommand{\Expected}{m}{\left<#1\right>}
 \NewDocumentCommand{\MeanValue}{m}{\overline{#1}}
 
-\NewDocumentCommand{\Int}{O{} O{} m m}{\kern -0.2em \int\limits_{#1}^{#2} #3\diff#4}
-\NewDocumentCommand{\Intx}{O{} O{} m}{\kern -0.2em \int\limits_{#1}^{#2} #3}
-\NewDocumentCommand{\OInt}{O{} O{} m m}{\oint\limits_{#1}^{#2}\!#3\diff#4}
+\NewDocumentCommand{\Int}{O{} O{} m m}{\int\limits_{#1}^{#2} \kern -0.2em #3\diff#4}
+\NewDocumentCommand{\Intx}{O{} O{} m}{\int\limits_{#1}^{#2} \kern -0.2em #3}
+\NewDocumentCommand{\OInt}{O{} O{} m m}{\oint\limits_{#1}^{#2} \kern -0.2em#3\diff#4}
 \NewDocumentCommand{\IInt}{O{} O{} m m m}{\iint\limits_{#1}^{\quad#2} #3 \diff#4\diff#5}
 \NewDocumentCommand{\OIInt}{O{} O{} m m}{\oiint\limits_{#1}^{\quad#2} #3 \diff#4}
 \NewDocumentCommand{\IIInt}{O{} O{} m m m m}{\iiint\limits_{#1}^{#2} #3 \diff#4\diff#5\diff#6}
@@ -100,7 +101,7 @@
 
 \NewDocumentCommand{\Nuclide}{O{} O{} m}{\ce{^{#1}_{#2}#3}}
 
-\NewDocumentCommand{\Sum}{O{} O{} m}{\sum\limits_{#1}^{#2} #3}
+\NewDocumentCommand{\Sum}{O{} O{} m}{\sum\limits_{#1}^{#2} {#3}}
 \NewDocumentCommand{\Product}{O{} O{} m}{\prod\limits_{#1}^{#2} #3}
 \NewDocumentCommand{\Abs}{m}{\left|#1\right|}
 \RenewDocumentCommand{\Hat}{O{0em} m}{#2\kern#1\hat{\phantom{#2}}}
