--- a/modules/scholar/templates/handout-base.tex
+++ b/modules/scholar/templates/handout-base.tex
@@ -3,6 +3,25 @@
 (@ block type @)handout(@ endblock @)
 (@ block typedir @)handouts(@ endblock @)
 
+(@ block style @)
+    \fancypagestyle{handout}{
+        \pagestyle{scholar}
+        \fancyhead[L]{\textit{Cvičenie č. (* issue.number *)}}
+        \fancyhead[R]{\textit{(* issue.date.strftime('%d. %m. %Y') *)}}
+    }
+(@ endblock style @)
+
 (@ block title @)
     \section{Cvičenie č. (* issue.number *)(@ block subtitle @)(@ endblock subtitle @)}
+
+    (@ for section in sections @)
+        \section{(* section.name *)}
+        \input{\activeDirectory/(* section.id *)/text.tex}
+        \subsection{Úlohy}
+        (@ for problem in problems @)
+            \subsubsection{problem.id}
+            \input{\activeDirectory/(* section.id *)/(* problem.id *)/problem.tex}
+            (@ block solution @)(@ endblock solution @)
+        (@ endfor @)
+    (@ endfor @)
 (@ endblock @)
